# Quick-Start-in-FastAPI-Python

./: .editorconfig  .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
2/2-1/2-1-12/: README.md  index.html  main.py
2/2-1/2-1-12/collection/: get-html-page.bru
2/2-1/2-1-13/: README.md  main.py
2/2-1/2-1-13/collection/: calculate.bru
2/2-2/2-2-13/: README.md
2/2-2/2-2-13/app/: main.py
2/2-2/2-2-13/app/collection/: bruno.json  get-user-data.bru
2/2-2/2-2-13/app/models/: models.py
2/2-2/2-2-14/: README.md
2/2-2/2-2-14/app/: main.py
2/2-2/2-2-14/app/collection/: bruno.json  valid-age.bru
2/2-2/2-2-14/app/models/: models.py
2/2-3/2-3-13/: README.md
2/2-3/2-3-13/app/: main.py
2/2-3/2-3-13/app/collection/: bruno.json
2/2-3/2-3-13/app/models/: models.py
3/3-1/3-1-15/: README.md
3/3-1/3-1-15/app/: main.py
3/3-1/3-1-15/app/models/: models.py
3/3-1/3-1-16/: README.md
3/3-1/3-1-16/app/: database.py  main.py
3/3-1/3-1-16/app/collection/: products-info.bru
3/3-1/3-1-16/app/models/: models.py
3/3-2/3-2-14/: README.md
3/3-2/3-2-14/app/: main.py
3/3-2/3-2-14/app/db/: database.py
3/3-2/3-2-14/app/models/: models.py
3/3-3/3-3-11/: README.md
3/3-3/3-3-11/app/: solution_1.py  solution_2.py
4/4-1/4-1-11/: README.md
4/4-1/4-1-11/app/: main.py
4/4-1/4-1-11/app/collection/: authenticate-user.bru
4/4-1/4-1-11/app/models/: models.py
4/4-2/4-2-12/: README.md  requirements.txt
4/4-2/4-2-12/app/: database.py  dependencies.py  main.py
4/4-2/4-2-12/app/collection/: bruno.json  login.bru
4/4-2/4-2-12/app/models/: models.py
4/4-3/4-3-11/: README.md
4/4-3/4-3-11/app/: config.py  main.py
4/4-3/4-3-11/app/collection/: get-guest-info.bru  (+1 more)
5/5-1/5-1-11/: README.md  main.py  requirements.txt
5/5-1/5-1-11/collection/: create_todo.bru  get_todo.bru  get_todos.bru
5/5-1/5-1-14/alembic/: env.py
5/5-1/5-1-14/collection/: bruno.json  update_todo.bru
5/5-2/5-2-14/alembic/: env.py
5/5-2/5-2-14/collection/: delete_todo.bru  get_todo.bru  update_todo.bru
9/9-2/: main.py
9/9-2/alembic/: env.py
9/9-2/alembic/versions/: 9ec4c28d2360_initial.py  f87248302e65_initial.py
9/9-2/app/core/: config.py
9/9-2/app/db/: database.py  models.py
9/9-2/app/repositories/: todo_repository.py
9/9-2/app/services/: todo_service.py
9/9-2/app/utils/: unitofwork.py
9/9-2/collection/: bruno.json  create-todo.bru
global_template/: README.md  alembic.ini
global_template/alembic/: env.py
global_template/app/: main.py
global_template/app/api/endpoints/: tag.py  todo.py  user.py  userprofile.py
global_template/app/api/schemas/: tag.py  todo.py  user.py  userprofile.py
global_template/app/core/: config.py
global_template/app/db/: database.py  models.py
global_template/app/exceptions/: core.py  db_exceptions.py  models.py  tag_exceptions.py  todo_exceptions.py  user_exceptions.py  userprofile_exceptions.py
global_template/app/repositories/: base_repository.py  tag_repository.py  todo_repository.py  user_repository.py  userprofile_repository.py
global_template/app/services/: tag_service.py  todo_service.py  user_service.py  userprofile_service.py
global_template/app/utils/: unitofwork.py
global_template/tests/: conftest.py
scripts/: create_subproject.sh
step_2/lesson_2_1/task_2_1_12/: index.html  main.py
step_2/lesson_2_1/task_2_1_12/collection/: bruno.json
step_2/lesson_2_1/task_2_1_13/: README.md  main.py
step_2/lesson_2_1/task_2_1_13/collection/: bruno.json
step_2/lesson_2_2/task_2_2_13/: README.md
step_2/lesson_2_2/task_2_2_13/app/: main.py
step_3/lesson_3_1/task_3_1_16/: README.md
step_3/lesson_3_1/task_3_1_16/app/: database.py
step_3/lesson_3_3/task_3_3_11/app/: solution_2.py
step_4/lesson_4_1/task_4_1_11/: README.md
step_4/lesson_4_2/task_4_2_12/: README.md
step_4/lesson_4_2/task_4_2_12/app/: dependencies.py
step_4/lesson_4_3/task_4_3_11/: README.md  requirements.txt
step_4/lesson_4_3/task_4_3_11/app/: config.py  main.py
step_5/lesson_5_1/task_5_1_14/collection/: delete_todo.bru
step_5/lesson_5_2/task_5_2_14/: README.md  main.py  requirements.txt
step_5/lesson_5_2/task_5_2_14/collection/: bruno.json  create_todo.bru
step_5/lesson_5_3/task_5_3_14/: README.md  add_methods.py  alembic.ini  config.py  database.py  models.py
step_5/lesson_5_3/task_5_3_14/migrations/: env.py
step_5/lesson_5_3/task_5_3_15/: README.md  add_methods.py  alembic.ini  database.py  models.py  sql_enums.py
step_5/lesson_5_3/task_5_3_15/migrations/: env.py
step_5/lesson_5_3/task_5_3_16/: add_methods.py  alembic.ini  database.py  models.py  sql_enums.py
step_5/lesson_5_3/task_5_3_16/migrations/: env.py
step_5/lesson_5_3/task_5_3_2/Alexey_Yakovenko_SQLAlchemy_2/: README.md  add_methods.py  add_methods_dao.py  alembic.ini  config.py  delete_methods_dao.py  models.py  schemas.py  select_methods_dao.py  sql_enums.py  update_methods_dao.py
step_6/lesson_6_1/task_6_1_14/: README.md  endpoints.py  exceptions.py  main.py  models.py
step_6/lesson_6_1/task_6_1_14/collections/: bruno.json  read_item_exist.bru  read_item_not_exist.bru  secret_area_admin.bru  secret_area_guest.bru
step_6/lesson_6_2/task_6_2_12/: README.md  endpoints.py  exceptions.py  main.py  models.py
step_6/lesson_6_2/task_6_2_12/collections/: bruno.json  user_data_all_correct.bru  user_data_wrong_age.bru  user_data_wrong_email.bru  user_data_wrong_password.bru  user_data_wrong_username.bru
step_6/lesson_6_3/task_6_3_13/: README.md  endpoints.py  exceptions.py  main.py  models.py
step_6/lesson_6_3/task_6_3_13/collections/: bruno.json  get_user_200.bru  get_user_404.bru  get_user_404_ru.bru  register_user_201.bru  register_user_400.bru  register_user_400_ru.bru
step_9/lesson_9_2/: README.md
step_9/lesson_9_2/alembic/: env.py
step_9/lesson_9_2/alembic/versions/: 9ec4c28d2360_initial.py  f87248302e65_initial.py
step_9/lesson_9_2/app/core/: config.py
step_9/lesson_9_2/app/db/: database.py  models.py
step_9/lesson_9_2/app/repositories/: base_repository.py  todo_repository.py
step_9/lesson_9_2/collection/: get-todos.bru
(+77 files in other folders)
